--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
 body, html {
 	height: 100%;
+	margin: 0;
 }
 
-#outerBoarder {
+.bg {
 	background-image: url("ocean.jpg");
 	height: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+
 }
 
 h1 {
