--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+body, html {
+	height: 100%;
+	margin: 0;
+}
+
 .bg {
 	background-image: url("ocean.jpg");
 	height: 100%;
@@ -5,10 +10,4 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 
-}
-
-h1 {
-	font-size: 48;
-	color: blue;
-	font-family: Helvetica;
-}
+}s
