--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
 .bg {
     /* The image used */
     background-image: url("https://maroj44.github.io/ocean.jpg");
