--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body, html {
 .bg {
     /* The image used */
     background-image: url("ocean.jpg");
+    filter: blur(2px);
 
     /* Full height */
     height: 100%; 
