Has an effect on hover rather than click

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body, html {
     /* The image used */
     background-image: url("ocean.jpg");
     filter: blur(8px);
-    -webkit-filter: blur(8px);
+    -webkit-filter: blur(8px); /*safari*/
 
     /* Full height */
     height: 100%; 
@@ -19,16 +19,40 @@ body, html {
 }
 
 .box {
-	top: 40%;
+	top: 50%;
 	left: 50%;
 	color: white;
 	width: 40%;
+	height: 30%;
 	padding: 0px;
 	text-align: center;
 	transform: translate(-50%, -50%);
 	position: absolute;
 	border: 3px solid #f1f1f1;
 	background-color: rgba(0,0,0, 0.2);
+
+	transition: width 4s, height 4s;
+	-webkit-transition: width 4s, height 4s;
+	transition-timing-function: ease;
+	-webkit-transition-timing-function: ease;
+}
+
+.box:hover {
+	width: 80%;
+	height: 80%;
+}
+
+.box:hover #HiddenText {
+	visibility: visible;
+	opacity: 1;
+}
+
+#HiddenText {
+	position: absolute;
+	opacity: 0;
+	visibility: hidden;
+	transition: opacity .5s;
+	transition-delay: 4s;
 }
 
 .logo {
@@ -40,4 +64,11 @@ body, html {
 .slogan {
 	font-family: Impact, Charcoal, sans-serif;
 	font-size: 20px;
+}
+
+.goal {
+	text-align: center;
+	font-size: 20px;
+	position: absolute;
+	
 }
